rust/macros/tests/ui/fail/weak_identifier_rejects_const.rs
use telltale_macros::weak_identifier;

#[weak_identifier("artifact_id")]
const ARTIFACT_ID: &str = "artifact";

fn main() {}
